@@ -60,6 +60,8 @@
                conf="test->default"/>
     <dependency org="checkstyle" name="checkstyle" rev="5.0"
                 conf="test->default"/>
+    <dependency org="commons-collections" name="commons-collections" 
+                rev="3.2.2" conf="test->default"/>
 
     <dependency org="jdiff" name="jdiff" rev="1.0.9"
                 conf="jdiff->default"/>
@@ -71,7 +73,7 @@
     <dependency org="commons-lang" name="commons-lang" 
                 rev="2.4" conf="releaseaudit->default"/>
     <dependency org="commons-collections" name="commons-collections" 
-                rev="3.1" conf="releaseaudit->default"/>
+                rev="3.2.2" conf="releaseaudit->default"/>
     <dependency org="org.hamcrest" name="hamcrest-all" rev="${hamcrest.version}" conf="test->default" />
   </dependencies>
 
