@@ -17,6 +17,9 @@ BUGFIXES:
   ZOOKEEPER-2146 BinaryInputArchive readString should check length before
   allocating memory (Hongchao Deng via michim)
 
+  ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
+  (phunt via cnauroth)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
